file: complete operation if all files skipped

If all files are skipped, then the batch rename operation would not end
appropriately.

To fix this, end the operation when all files are skipped.

https://bugzilla.gnome.org/show_bug.cgi?id=771398